# obs-qsv-onevpl

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CNAME  README.md  obs-qsv-onevpl-encoder-internal.cpp  obs-qsv-onevpl-encoder-internal.h  obs-qsv-onevpl-encoder.cpp  obs-qsv-onevpl-plugin-init.c
builds/: Readme.md
builds/locale/: en-US.ini
libvpl-private/vpl/private/: mfxav1.h  mfxddi.h  mfxenctools.h
obs-qsvonevpl/: CMakeLists.txt  obs-qsv-onevpl-encoder-internal.cpp  obs-qsv-onevpl-encoder-internal.h  obs-qsv-onevpl-encoder-internal.hpp  obs-qsv-onevpl-encoder.cpp  obs-qsv-onevpl-encoder.h  obs-qsv-onevpl-encoder.hpp  obs-qsv-onevpl-plugin-init.c  obs-qsv-onevpl-plugin-init.cpp  obs-qsv-onevpl-plugin-init.hpp  obs-qsv-onevpl-plugin-main.c  obs-qsv-onevpl-plugin-main.cpp
obs-qsvonevpl/bits/: linux_defs.h  linux_defs.hpp  windows_defs.h  windows_defs.hpp
obs-qsvonevpl/helpers/: bitstream_manager.hpp  brc_routines.cpp  brc_routines.h  brc_routines.hpp  common_directx11.cpp  common_directx11.h  common_directx11.hpp  common_utils.cpp  common_utils.h  common_utils.hpp  common_utils_linux.cpp  common_utils_windows.cpp  ext_buf_manager.h  ext_buf_manager.hpp  hw_d3d11.cpp  hw_d3d11.hpp  obs-av1.c  obs-av1.h  qsv_params.hpp  task_manager.cpp  task_manager.hpp
obs-qsvonevpl/libvpl/api/: mfx.h  mfxcommon.h  mfxdefs.h  mfxstructures.h  mfxvideo++.h
obs-qsvonevpl/libvpl/api/legacy/: mfxvideo++.h
obs-qsvonevpl/libvpl/api/private/: mfxddi.h  mfxenctools.h  mfxplugin.h
obs-qsvonevpl/libvpl/dispatcher/: mfx_critical_section.h  mfx_dispatcher.h  mfx_dispatcher_defs.h  mfx_dispatcher_vpl.h  mfx_dispatcher_vpl_log.h  mfx_dispatcher_vpl_win.h  mfx_load_dll.h  mfx_vector.h  mfx_win_reg_key.h  mfxloader.h  mfxvideo++.h
obs-qsvonevpl/libvpl/src/: main.cpp  mfx_critical_section.cpp  mfx_dispatcher.cpp  mfx_dispatcher_log.cpp  mfx_dispatcher_vpl.cpp  mfx_dispatcher_vpl_config.cpp  mfx_dispatcher_vpl_loader.cpp  mfx_dispatcher_vpl_lowlatency.cpp  mfx_dispatcher_vpl_msdk.cpp  mfx_driver_store_loader.cpp  mfx_dxva2_device.cpp  mfx_function_table.cpp  mfx_library_iterator.cpp  mfx_load_dll.cpp
obs-qsvonevpl/obs-qsv-test/: CMakeLists.txt  obs-qsv-test.cpp
obs-qsvonevpl/obs-qsvonevpl-test/: CMakeLists.txt  obs-qsv-test.cpp
oneVPL-private/: CMakeLists.txt
oneVPL-private/vpl/private/: mfxav1.h  mfxenctools.h
source/: CMakeLists.txt  QSV_Encoder.cpp  QSV_Encoder.h  QSV_Encoder_Internal.cpp  QSV_Encoder_Internal.h  QSV_Encoder_Internal_new.cpp  QSV_Encoder_Internal_new.h  common_directx11.cpp  common_directx11.h  common_directx9.cpp  common_directx9.h  common_utils.cpp  common_utils.h  common_utils_windows.cpp  device_directx9.cpp  device_directx9.h  obs-qsv11-plugin-main.c  obs-qsv11.c
source/libmfx/include/vpl/: mfx_dispatcher.h  mfx_dispatcher_vpl.h  mfx_driver_store_loader.h  mfx_dxva2_device.h  mfx_library_iterator.h
source/libmfx/include/vpl/include/: mfx.h  mfxvideo++.h
source/libmfx/include/vpl/include/legacy/: mfxvideo++.h
source/libmfx/src/msdk/: mfx_dispatcher_uwp.cpp
source/libmfx/src/vpl/: main.cpp  mfx_dispatcher.cpp  mfx_dispatcher_log.cpp  mfx_dispatcher_vpl.cpp  mfx_dispatcher_vpl_config.cpp  mfx_dispatcher_vpl_loader.cpp  mfx_dispatcher_vpl_log.cpp  mfx_dispatcher_vpl_lowlatency.cpp  mfx_dispatcher_vpl_msdk.cpp  mfx_driver_store_loader.cpp  mfx_dxva2_device.cpp  mfx_function_table.cpp  mfx_load_dll.cpp  mfx_win_reg_key.cpp
source/obs-qsv-test/: obs-qsv-test.cpp
